fix spacing and move popover arrow to the left

--- a/fractal-gtk/res/app.css
+++ b/fractal-gtk/res/app.css
@@ -142,6 +142,10 @@ row:not(:selected) .member-uid {
 .messages-history row:selected .msg-emote
 { color: @theme_selected_fg_color; }
 
+.autocomplete {
+  margin-left: 150px;
+}
+
 .autocomplete,
 .autocomplete list,
 .autocomplete row:not(:hover):not(:selected) {
